--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,7 +12,7 @@
       
           <label for="country">Country</label>
           <select id="country" name="country">
-            <option value="australia">India</option>
+            <option value="India">India</option>
             <option value="canada">Canada</option>
             <option value="usa">USA</option>
           </select>
